--- a/App.config
+++ b/App.config
@@ -16,6 +16,22 @@
 	
           </dependentAssembly>
 	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="Unity.Abstractions" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-5.11.7.0" newVersion="5.11.7.0" />
+	
+          </dependentAssembly>
+	
+          <dependentAssembly>
+	
+              <assemblyIdentity name="Unity.Container" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
+	
+              <bindingRedirect oldVersion="0.0.0.0-5.11.11.0" newVersion="5.11.11.0" />
+	
+          </dependentAssembly>
+	
       </assemblyBinding>
 	
   </runtime>
