--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
   <package id="Prism.Unity" version="8.0.0.1909" targetFramework="net472" />
   <package id="Prism.Wpf" version="8.0.0.1909" targetFramework="net472" />
