TreeView Symbol Selection - Block read selected symbols

--- a/TcADSNet_Demo.csproj
+++ b/TcADSNet_Demo.csproj
@@ -37,6 +37,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MahApps.Metro.IconPacks.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0c0d510f9915137a, processorArchitecture=MSIL">
+      <HintPath>packages\MahApps.Metro.IconPacks.Material.4.11.0\lib\net47\MahApps.Metro.IconPacks.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="MahApps.Metro.IconPacks.Material, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0c0d510f9915137a, processorArchitecture=MSIL">
+      <HintPath>packages\MahApps.Metro.IconPacks.Material.4.11.0\lib\net47\MahApps.Metro.IconPacks.Material.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\lib\net461\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
     </Reference>
@@ -137,7 +143,9 @@
     <Compile Include="Model\ConfigFile.cs" />
     <Compile Include="Model\JsonSerializeReturn.cs" />
     <Compile Include="Model\MySymbol.cs" />
+    <Compile Include="Model\ReturnObject.cs" />
     <Compile Include="Model\SymbolsCollection.cs" />
+    <Compile Include="Model\SymbolsInfo.cs" />
     <Compile Include="MyRegions.cs" />
     <Compile Include="RegionsName.cs" />
     <Compile Include="ViewModels\VariablesTreeViewModel.cs" />
