TreeView Symbol Selection - Block read selected symbols

--- a/TcADSNet_Demo.csproj
+++ b/TcADSNet_Demo.csproj
@@ -141,6 +141,7 @@
     </ApplicationDefinition>
     <Compile Include="Model\AdsConn.cs" />
     <Compile Include="Model\ConfigFile.cs" />
+    <Compile Include="Model\DataTypePropertyConverter.cs" />
     <Compile Include="Model\JsonSerializeReturn.cs" />
     <Compile Include="Model\MySymbol.cs" />
     <Compile Include="Model\ReturnObject.cs" />
